[gd_scene load_steps=6 format=2]

[ext_resource path="res://white.png" type="Texture" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/Fonts/KdamThmor_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Assets/Fonts/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0313726, 0.12549, 0.0352941, 1 )
position = Vector2( 320, 180 )
scale = Vector2( 40, 23 )
z_index = -15
texture = ExtResource( 1 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="H" type="HBoxContainer" parent="M"]
margin_left = 20.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 340.0

[node name="V" type="VBoxContainer" parent="M/H"]
margin_right = 267.0
margin_bottom = 320.0
custom_constants/separation = 45

[node name="Control" type="Control" parent="M/H/V"]
margin_right = 267.0

[node name="Title" type="Label" parent="M/H/V"]
margin_top = 45.0
margin_right = 267.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Awesome Game!"

[node name="Control2" type="Control" parent="M/H/V"]
margin_top = 145.0
margin_right = 267.0
margin_bottom = 145.0

[node name="Highscore" type="Label" parent="M/H/V"]
margin_top = 190.0
margin_right = 267.0
margin_bottom = 255.0
custom_fonts/font = ExtResource( 3 )
text = "Highscore :
0"
align = 1

[node name="Buttons" type="VBoxContainer" parent="M/H"]
margin_left = 340.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 300.0
size_flags_horizontal = 10
size_flags_vertical = 4
custom_constants/separation = 20

[node name="NewGame" type="Button" parent="M/H/Buttons"]
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="Settings" type="Button" parent="M/H/Buttons"]
margin_top = 60.0
margin_right = 240.0
margin_bottom = 100.0
rect_min_size = Vector2( 240, 40 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="About" type="Button" parent="M/H/Buttons"]
margin_top = 120.0
margin_right = 240.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 40 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "About"

[node name="Control" type="Control" parent="M/H/Buttons"]
margin_top = 180.0
margin_right = 240.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 40 )

[node name="Quit" type="Button" parent="M/H/Buttons"]
margin_top = 240.0
margin_right = 240.0
margin_bottom = 280.0
rect_min_size = Vector2( 240, 40 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="M/H/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="M/H/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="M/H/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="M/H/Buttons/Quit" to="." method="_on_Quit_pressed"]
